ios/cactus.xcframework/ios-arm64-simulator/cactus.framework/Headers/cactus_ffi.h

#ifndef CACTUS_FFI_H
#define CACTUS_FFI_H

#include <stddef.h>
#include <stdint.h>

#if __GNUC__ >= 4
  #define CACTUS_FFI_EXPORT __attribute__ ((visibility ("default")))
  #define CACTUS_FFI_LOCAL  __attribute__ ((visibility ("hidden")))
#else
  #define CACTUS_FFI_EXPORT
  #define CACTUS_FFI_LOCAL
#endif

#ifdef __cplusplus
extern "C" {
#endif

typedef void* cactus_model_t;

typedef void (*cactus_token_callback)(const char* token, uint32_t token_id, void* user_data);

CACTUS_FFI_EXPORT cactus_model_t cactus_init(const char* model_path, size_t context_size);

CACTUS_FFI_EXPORT int cactus_complete(
    cactus_model_t model,
    const char* messages_json,
    char* response_buffer,
    size_t buffer_size,
    const char* options_json,
    const char* tools_json,
    cactus_token_callback callback,
    void* user_data
);


CACTUS_FFI_EXPORT int cactus_embed(
    cactus_model_t model,
    const char* text,
    float* embeddings_buffer,
    size_t buffer_size,
    size_t* embedding_dim
);

CACTUS_FFI_EXPORT void cactus_reset(cactus_model_t model);

CACTUS_FFI_EXPORT void cactus_stop(cactus_model_t model);

CACTUS_FFI_EXPORT void cactus_destroy(cactus_model_t model);

// ============================================================================
// ASYNC FFI FUNCTIONS - for Dart_PostCObject communication
// ============================================================================

// Initialize Dart API for async callbacks - MUST be called once on startup
CACTUS_FFI_EXPORT intptr_t InitializeDartApiDL(void* data);

// Async FFI functions that return immediately and post results via Dart_PostCObject
CACTUS_FFI_EXPORT void cactus_init_async(
    const char* model_path,
    size_t context_size,
    int64_t dart_port
);

CACTUS_FFI_EXPORT void cactus_complete_async(
    cactus_model_t model,
    const char* messages_json,
    const char* options_json,
    const char* tools_json,
    int32_t max_tokens,
    int32_t quantization,
    bool enable_streaming,
    int64_t dart_port
);

CACTUS_FFI_EXPORT void cactus_embed_async(
    cactus_model_t model,
    const char* text,
    int32_t quantization,
    int64_t dart_port
);

#ifdef __cplusplus
}
#endif

#endif 